--- a/MyUserManagement/MyUserManagement.csproj
+++ b/MyUserManagement/MyUserManagement.csproj
@@ -74,6 +74,12 @@
     <Compile Include="Admin\UsersListForm.Designer.cs">
       <DependentUpon>UsersListForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyCalculator\Calculator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyCalculator\Calculator.Designer.cs">
+      <DependentUpon>Calculator.cs</DependentUpon>
+    </Compile>
     <Compile Include="Infrastructure\BaseButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -121,6 +127,12 @@
       <DependentUpon>ChangePasswordForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Stuff.cs" />
+    <Compile Include="MyCalculator\MyButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MyCalculator\MyLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UpdateProfileForm.cs">
       <SubType>Form</SubType>
     </Compile>
